# nhs-fhir-middy-error-handler

./: .eslintrc  .gitallowed  .gitignore  .pre-commit-config.yaml  .releaserc  .tool-versions  .trivyignore.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  babel.config.js  jest.config.js  jest.config.ts  package-lock.json  package.json  pyproject.toml  release-config.js  release.config.cjs  sonar-project.properties  tsconfig.json  tsconfig.test.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/actions/setup_workspace/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  ci.yml  combine-dependabot-prs.yml  combine_dependabot_prs.yml  dependabot-auto-approve_and_merge.yml  dependabot_auto_approve_and_merge.yml  pr-link.yml  pr_title_check.yml  pull_request.yml  quality_checks.yml  release.yml  rename-dependabot-prs.yml  rename_dependabot_prs.yml  sync_copilot.yml
.sbom/: sbom.dev.cdx.json
.trivy_out/: dependency_results_node.txt
release_notes/: v2.1.73.md  v2.1.74.md  v2.1.75.md  v2.1.76.md  v2.1.77.md  v2.1.78.md  v2.1.79.md  v2.1.80.md  v2.1.81.md  v2.1.82.md
scripts/: calculate_version.py
src/: index.d.ts  index.js  index.ts
tests/: index.test.js  index.test.ts  type-compatibility.test.ts
tests/fixtures/: middy-powertools-compat.ts
