[project]
python = "^3.14"
name = "nhs-fhir-middy-error-handler"

[tool.poetry]
name = "nhs-fhir-middy-error-handler"
description = "A middy error handler for FHIR Lambdas"
version = "0.0.1-alpha"
authors = [
    "EPS"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/nhs-fhir-middy-error-handler"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[tool.poetry.scripts]
